# GatherGood

./: .gitignore  README.md
backend/: .env  .gitignore  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
backend/src/: entrypoint.sh  gunicorn_conf.py  sample_django_data.json
backend/src/apps/accounts/: admin.py  apps.py  permissions.py  serializers.py  utils.py
backend/src/apps/accounts/api/: urls.py
backend/src/apps/accounts/api/views/: common.py  user.py
backend/src/apps/accounts/management/commands/: example_data.py
backend/src/apps/accounts/migrations/: 0001_initial.py
backend/src/apps/accounts/models/: __init__.py  user.py
backend/src/apps/events/: admin.py  filters.py  models.py  serializers.py  services.py
backend/src/apps/events/api/: urls.py
backend/src/apps/events/api/views/: event.py
backend/src/apps/events/migrations/: 0001_initial.py  0002_event_name.py
backend/src/apps/review/: admin.py  apps.py  exceptions.py  selectors.py  serializers.py  services.py  utils.py
backend/src/apps/review/api/: urls.py  views.py
backend/src/apps/review/migrations/: 0001_initial.py
backend/src/apps/review/models/: __init__.py  review.py
backend/src/config/: urls.py
backend/src/config/settings/: __init__.py
backend/src/config/settings/components/: __init__.py  common.py  db_settings.py  debug_toolbar_settings.py  installed_apps.py  middleware_settings.py  rest_framework_settings.py  swagger_settings.py  yasg_schemas.py
frontend/: capacitor.config.ts  ionic.config.json  (+2 more)
recommender/: README.md  pipeline.py  pyproject.toml
(+33 files in other folders)
